--- a/kubejs/assets/kubejs/lang/ru_ru.json
+++ b/kubejs/assets/kubejs/lang/ru_ru.json
@@ -1,4 +1,5 @@
 {
     "painting.kubejs.orokin_hall.title": "Золотой зал",
-    "painting.kubejs.orokin_hall.author": "Орокин"
+    "painting.kubejs.orokin_hall.author": "Орокин",
+    "item.kubejs.roasted_mushroom": "Жаренный гриб"
 }
