--- a/kubejs/assets/kubejs/lang/ru_ru.json
+++ b/kubejs/assets/kubejs/lang/ru_ru.json
@@ -1,5 +1,7 @@
 {
     "painting.kubejs.orokin_hall.title": "Золотой зал",
     "painting.kubejs.orokin_hall.author": "Орокин",
-    "item.kubejs.roasted_mushroom": "Жаренный гриб"
+    "item.kubejs.roasted_mushroom": "Жаренный гриб",
+    "item.kubejs.bf_sword": "Слишком большой меч",
+    "entity.minecraft.villager.spacecatcustomprofessions.professionName": "Торговец звёзд"
 }
